# RustWebProduction

./: cargo.toml
Chapter1/: Cargo.toml
Section2-processing-data_and_handling-views/web-app-actix/: Cargo.toml  state.json
Section2-processing-data_and_handling-views/web-app-actix/front_end/: package-lock.json  package.json
Section2-processing-data_and_handling-views/web-app-actix/front_end/src/: app.jsx
Section2-processing-data_and_handling-views/web-app-actix/front_end/src/components/: CreateTodoItem.jsx  ToDoItem.jsx
Section2-processing-data_and_handling-views/web-app-actix/javascript/: main.js
Section2-processing-data_and_handling-views/web-app-actix/src/: lib.rs  main.rs  processes.rs  state.rs
Section2-processing-data_and_handling-views/web-app-actix/src/json_serialization/: to_do_items.rs
Section2-processing-data_and_handling-views/web-app-actix/src/to_do/: enums.rs
Section2-processing-data_and_handling-views/web-app-actix/src/to_do/structs/: base.rs  pending.rs
Section2-processing-data_and_handling-views/web-app-actix/src/to_do/traits/: create.rs  edit.rs  get.rs
Section2-processing-data_and_handling-views/web-app-actix/src/views/: mod.rs
Section2-processing-data_and_handling-views/web-app-actix/src/views/app/: items.rs  mod.rs
Section2-processing-data_and_handling-views/web-app-actix/src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
Section2-processing-data_and_handling-views/web-app-actix/templates/: main.html
chapter2/designing_your_web_app_in_rust/: Cargo.toml
chapter2/designing_your_web_app_in_rust/src/: lib.rs
(+45 files in other folders)
