[package]
name = "designing_your_web_app_in_rust"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]] 
path = "src/main.rs"
name = "web_app_design"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.14"
rand = "0.8.5"
